Fix tests, clean up
